# Project

./: README  TODO.todo
src/: CMakeLists.txt  Colors.h  OpenGl.h  main.c  shaders.c  shaders.h  window.c  window.h
src/Lib/glad/: CMakeLists.txt
src/Lib/glad/include/glad/: glad.h
src/Lib/glad/src/: glad.c
src/math/: CMakeLists.txt  math.h  matrcies.h  matrices.c  matrices.h  vector.c  vector.h
src/shaders/: standard.vert
src/util/: CMakeLists.txt  Error.h  file.c  file.h
